--- a/src/client/MainUI.fxml
+++ b/src/client/MainUI.fxml
@@ -7,26 +7,24 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="AnchorPane" prefHeight="527.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainUIController">
+<AnchorPane fx:id="AnchorPane" prefHeight="527.0" prefWidth="659.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.MainUIController">
    <children>
-      <GridPane fx:id="GridPane" layoutX="166.0" layoutY="49.0" prefHeight="175.0" prefWidth="262.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints maxHeight="52.0" minHeight="10.0" prefHeight="52.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="47.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="52.0" minHeight="10.0" prefHeight="52.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-      </GridPane>
-      <HBox layoutY="27.0" prefHeight="338.0" prefWidth="207.0">
+      <VBox fx:id="VBox1" layoutX="6.0" layoutY="27.0" prefHeight="384.0" prefWidth="372.0">
          <children>
-            <TreeView fx:id="TreeView" prefHeight="338.0" prefWidth="223.0" />
+            <TreeView fx:id="TreeView1" editable="true" prefHeight="384.0" prefWidth="379.0" />
          </children>
-      </HBox>
-      <MenuBar fx:id="MenuBar" layoutY="2.0" prefHeight="25.0" prefWidth="690.0">
+      </VBox>
+      <ProgressIndicator fx:id="ProgressIndicator1" layoutX="6.0" layoutY="421.0" prefHeight="92.0" prefWidth="316.0" progress="0.0" />
+      <TextField fx:id="TextFiel1" layoutX="461.0" layoutY="141.0" />
+      <TextField fx:id="TextFiel2" layoutX="461.0" layoutY="189.0" />
+      <TextField fx:id="TextFiel3" layoutX="461.0" layoutY="241.0" />
+      <TextField fx:id="TextFiel4" layoutX="461.0" layoutY="289.0" />
+      <Label fx:id="Label1" layoutX="391.0" layoutY="145.0" text="文件名：" />
+      <Label fx:id="Label2" layoutX="391.0" layoutY="193.0" text="文件类型：" />
+      <Label fx:id="Label3" layoutX="391.0" layoutY="245.0" text="大小：" />
+      <Label fx:id="Label4" layoutX="391.0" layoutY="293.0" text="只读：" />
+      <Label fx:id="Label5" layoutX="468.0" layoutY="105.0" text="文件属性" />
+      <MenuBar fx:id="MenuBar1" layoutX="6.0" layoutY="2.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
@@ -45,7 +43,8 @@
           </Menu>
         </menus>
       </MenuBar>
-      <ScrollBar layoutX="683.0" layoutY="27.0" orientation="VERTICAL" prefHeight="500.0" prefWidth="14.0" />
-      <ProgressIndicator layoutX="27.0" layoutY="380.0" prefHeight="91.0" prefWidth="153.0" progress="0.0" />
+      <Label fx:id="label6" layoutX="58.0" layoutY="496.0" text="当前磁盘使用率:" />
+      <Label layoutX="513.0" layoutY="27.0" text="已打开文件数：" />
+      <Label fx:id="openedFileNum" layoutX="597.0" layoutY="27.0" prefHeight="17.0" prefWidth="27.0" text="0/5" />
    </children>
 </AnchorPane>
