--- a/src/client/ReadOnly.fxml
+++ b/src/client/ReadOnly.fxml
@@ -9,7 +9,7 @@
    <children>
       <Label fx:id="label1" layoutX="14.0" layoutY="226.0" text="读取长度" />
       <TextField fx:id="textField1" layoutX="75.0" layoutY="222.0" />
-      <TextArea fx:id="textArea1" layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="303.0" />
+      <TextArea fx:id="textArea1" layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="303.0" editable="false"/>
       <Button fx:id="button1" layoutX="248.0" layoutY="222.0" mnemonicParsing="false" onAction="#onButtonClickedReadOnly" text="确定" />
    </children>
 </AnchorPane>
